--- a/Site/responsivo.css
+++ b/Site/responsivo.css
@@ -20,3 +20,68 @@
 		margin-left: 300px;
 	}
 }
+@media only screen and (max-width: 1000px) {
+	body{
+		margin: 20px;
+	}
+	#geral {
+		margin-inline: 0;
+		width: 100%;
+	}
+	#imagem {
+		flex: none;
+		width: 100%;
+		margin-bottom: 1rem;
+	}
+	nav {
+		margin: 0;
+		padding: 1rem 0;
+		flex-direction: column;
+		align-items: center;
+	}
+	nav a {
+		display: none;
+	}
+	#container-central {
+		display: flex;
+		flex-direction: column;
+		height: auto;
+	}
+	#inner-principal {
+		width: 100%;
+		margin-bottom: 1rem;
+	}
+	#materia-completa {
+		width: 100%;
+		margin-bottom: 1rem;
+		height: 450px;
+		flex-flow: column;
+	}
+	#novas-noticias {
+		width: 100%;
+		margin-bottom: 1rem;
+	}
+	#noticia-central {
+		width: 100%;
+		margin-bottom: 1rem;
+	}
+	#trending-topics {
+		display: flex;
+		flex-wrap: wrap;
+		flex-flow: column;
+		align-items: center;
+		margin-bottom: 150px;
+		height: 600px;
+	}
+	.materia-imagem{
+		height: 14rem;
+		margin-bottom: 15px;
+	}
+	#ler-mais{
+		height: 450px;
+		justify-content: center;
+	}
+	#ler-mais p{
+		margin-bottom: 30px;
+	}
+}
